add: main Setups

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <header>
 
+        <!-- Barra Logo/Link/Login -->
+
         <div class="Header-Container">
             <div>
                 <div class="Header-Logo">Logo</div>
@@ -21,17 +23,80 @@
             </div>
         </div>
 
+        <!-- /Barra Logo/Link/Login -->
+
     </header>
 
     <main>
 
+        <!-- 1° Setup -->
+
         <div class="Main-Container1">
 
-            <div class="Main-Item1">
+            <div class="Main-Item1"></div>
+
+        </div>
+
+        <!-- /1° Setup -->
+
+        <!-- 2° Setup -->
+
+        <div>
+
+            <div class="Main-Container2">
+
+                <div class="Main-Item2-1"></div>
+                <div class="Main-Item2-2"></div>
 
             </div>
 
         </div>
+
+        <!-- /2° Setup -->
+
+        <!-- 3° Setup -->
+
+        <div>
+
+            <div class="Main-Container3">
+
+                <div class="Main-Item3-1"></div>
+                <div class="Main-Item3-2"></div>
+
+            </div>
+
+        </div>
+
+        <!-- /3° Setup -->
+
+        <!-- 4° Setup -->
+
+        <div>
+
+            <div class="Main-Container4">
+
+                <div class="Main-Item4-1"></div>
+                <div class="Main-Item4-2"></div>
+
+            </div>
+
+        </div>
+
+        <!-- /4° Setup -->
+
+        <!-- 5° Setup -->
+
+        <div>
+
+            <div class="Main-Container5">
+
+                <div class="Main-Item5"></div>
+
+            </div>
+
+        </div>
+
+        <!-- /5° Setup -->
 
     </main>
     
