add: Final project

--- a/index.html
+++ b/index.html
@@ -101,7 +101,40 @@
     </main>
     
     <footer>
+        <!-- 6° Setup -->
 
+        <div>
+
+            <div class="Footer-Container1">
+
+                <div class="Footer-Item1"></div>
+                <div class="Footer-Item2"></div>
+                <div class="Footer-Item3"></div>
+                <div class="Footer-Item4"></div>
+                <div class="Footer-Item5"></div>
+
+            </div>
+
+        </div>
+
+        <!-- /6° Setup -->
+
+        <hr>
+
+        <!-- final setup -->
+
+        <div class="Footer-Container2">
+
+            <div class="Footer-Items">
+
+                <div class="Footer-Logo">Logo</div>
+                <div class="Footer-Button">Button</div>
+
+            </div>
+
+        </div>
+
+        <!-- /final setup -->
 
     </footer>
 
