--- a/index.html
+++ b/index.html
@@ -18,8 +18,18 @@
         <div class="Header-Container">
             <div>
                 <div class="Header-Logo">Logo</div>
-                <div class="Header-Links"> link link link link link</div>
-                <div class="Header-Login">login</div>
+                <div class="Header-Links">
+                    <ul>
+                        <li><a href="">Link</a></li>
+                        <li><a href="">Link</a></li>
+                        <li><a href="">Link</a></li>
+                        <li><a href="">Link</a></li>
+                        <li><a href="">Link</a></li>
+                    </ul>
+                </div>
+                <div class="Header-Login">
+                    <a href="">Login</a>
+                </div>
             </div>
         </div>
 
